# rtcms4j-core-api/src/main/resources/static/openapi/core-api.yaml
@@ -756,6 +756,12 @@ paths:
           schema:
             type: integer
             format: int64
+        - name: propagate
+          description: Propagate rotated secret
+          in: query
+          required: true
+          schema:
+            type: boolean
       responses:
         '200':
           description: Successful operation
@@ -1315,6 +1321,45 @@ paths:
         '500':
           $ref: '#/components/responses/InternalServerError'
 
+  ############################
+  # Available resources: #
+  ############################
+  /available:
+    get:
+      tags:
+        - Core
+      summary: "Find available resources: namespaces or applications"
+      operationId: findAvailableResources
+      parameters:
+        - name: name
+          description: Search by name param
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: pageable
+          in: query
+          required: false
+          schema:
+            $ref: '#/components/schemas/Pageable'
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AvailableResourcesDto'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '405':
+          $ref: '#/components/responses/MethodNotAllowed'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+
 components:
   securitySchemes:
     bearerAuth:
@@ -1703,3 +1748,14 @@ components:
               $ref: '#/components/schemas/ConfigurationJsonValues'
             jsonSchema:
               $ref: '#/components/schemas/ConfigurationJsonSchema'
+
+    AvailableResourcesDto:
+      type: object
+      required:
+        - namespaces
+        - applications
+      properties:
+        namespaces:
+          $ref: '#/components/schemas/PagedModelNamespaceDto'
+        applications:
+          $ref: '#/components/schemas/PagedModelApplicationDto'
