# rtcms4j-core-server/src/main/kotlin/ru/enzhine/rtcms4j/core/service/internal/ApplicationService.kt
@@ -42,6 +42,7 @@ interface ApplicationService {
     fun rotateApplicationClientCredentials(
         namespaceId: Long,
         applicationId: Long,
+        propagate: Boolean,
     ): KeycloakClient
 
     @Throws(ConditionFailureException.NotFound::class)
